# sec4dev-python

./: .gitignore  README.md  pyproject.toml
sec4dev/: __init__.py  client.py  email.py  exceptions.py  http.py  ip.py  validation.py
sec4dev/models/: __init__.py  email.py  ip.py
tests/: __init__.py  test_client.py  test_email.py  test_ip.py  test_validation.py
